# janus-backup

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.config/: README.md  template.config.json  template.projects.json  template.projects.toml  template.projects.yaml
.github/workflows/: push.yml
deployment/dockerfiles/: Dockerfile  Dockerfile.local
janusbackup/: __main__.py  config.py  logger.py
janusbackup/api/: __init__.py  dependencies.py  get_app.py  routes.py
janusbackup/api/controllers/: __init__.py  logs.py  projects.py
janusbackup/api/middleware/: auth_jwt.py
janusbackup/api/utils/: exception_handler.py
janusbackup/config/: __init__.py  common.py  db.py  s3.py  sentry.py
janusbackup/core/: __init__.py  backup_pipeline.py  exceptions.py
janusbackup/core/backup_providers/: __init__.py  base_provider.py  mongo_provider.py  provider_manager.py
janusbackup/core/integrations/: __init__.py  s3.py
janusbackup/core/mechanics/: backup_pipeline.py
janusbackup/core/mechanics/backup_providers/: __init__.py  base_provider.py  (+2 more)
janusbackup/core/utils/: __init__.py  catch_job_exception.py  exception_handler.py  fernet.py  json.py  jwt.py  projects_loader.py
janusbackup/database/: db_events.py
janusbackup/database/models/: __init__.py  project.py
janusbackup/schemas/: __init__.py  base.py  logs.py  misc.py  projects.py
janusbackup/worker/: __init__.py  manager.py  run_worker.py
janusbackup/worker/jobs/: __init__.py  base.py  clear_logs_db.py  clear_old_backups.py  run_pipeline.py  test_job.py
